<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adapt_add_cities">cities</string>
    <string name="adapt_setting_done">Done</string>
    <string name="adapt_widget">Adapt widget</string>
    <string name="addLocationHint">City name</string>
    <string name="add_cities">Add cities</string>
    <string name="add_city">Add new location</string>
    <string name="add_new">Add new</string>
    <string name="air_quality">Air quality</string>
    <string name="air_quality_text">Air Quality:</string>
    <string name="alarm">Alarm</string>
    <string name="alert_setting_title">Weather alert notifications</string>
    <string name="alert_summary">Send notifications about significant weather conditions</string>
    <string name="allTimePermissionRequiredMessage">"%1$s needs location permission allowed all the time. Otherwise, the location-related functions can't work properly. Select Permissions in App info to set."</string>
    <string name="alternative_button_accept">Accept</string>
    <string name="alternative_button_next">Next</string>
    <string name="alternative_option_desc">By tapping \"Accept\", you confirm your selection of these permission settings.</string>
    <string name="alternative_permission_desc">To display weather information for your current location, Moto Widget needs permission to access location data even when the app is closed or not in use.</string>
    <string name="alternative_permission_name">Location permission</string>
    <string name="alternative_title">This app is developed by Motorola Mobility LLC.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_info">APP INFO</string>
    <string name="app_name_row">Moto Widget</string>
    <string name="app_widget_adapt_description">Expand the widget to show more info</string>
    <string name="app_widget_weather_description">Change size to display different info</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aqi">AQI</string>
    <string name="aqi_category_0">Excellent(%1$s)</string>
    <string name="aqi_category_1">Fair(%1$s)</string>
    <string name="aqi_category_1_prc">Good(%1$s)</string>
    <string name="aqi_category_2">Poor(%1$s)</string>
    <string name="aqi_category_2_prc">Lightly Polluted(%1$s)</string>
    <string name="aqi_category_3">Unhealthy(%1$s)</string>
    <string name="aqi_category_3_prc">Moderately Polluted(%1$s)</string>
    <string name="aqi_category_4">Very Unhealthy(%1$s)</string>
    <string name="aqi_category_4_prc">Heavily Polluted(%1$s)</string>
    <string name="aqi_category_5">Dangerous(%1$s)</string>
    <string name="aqi_category_5_prc">Severely Polluted(%1$s)</string>
    <string name="background_transparent">Background opacity</string>
    <string name="battery">Battery</string>
    <string name="battery_percent">%1$d%%</string>
    <string name="battery_status">Battery status</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="cancel">Cancel</string>
    <string name="cant_get_forecast">"Can't get forecast for this location"</string>
    <string name="card_menu_guide">You can add 1 more city by tapping \"Cities\" in this menu</string>
    <string name="cd_down_arrow">Next panel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charging">Charging</string>
    <string name="chip_text">Chip text</string>
    <string name="cities">Cities</string>
    <string name="cities_summary">Choose up to 2 cities</string>
    <string name="cities_toast">At least 1 city must be chosen</string>
    <string name="city_country">%1$s, %2$s</string>
    <string name="city_exist">The city already exists</string>
    <string name="city_state_country">%1$s, %2$s, %3$s</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cli_high_temp_title">H: %1$s</string>
    <string name="cli_low_temp_title">L: %1$s</string>
    <string name="clock_panel_summary_analog">Analog</string>
    <string name="clock_panel_summary_digital">Digital</string>
    <string name="clock_panel_summary_digital_dual">Dual time</string>
    <string name="clock_panel_title">Time</string>
    <string name="clock_styles">Clock styles</string>
    <string name="clock_styles_analog">Analog</string>
    <string name="clock_styles_digital">Digital</string>
    <string name="clock_styles_summary">Clock styles only affect the Time window</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete">Complete</string>
    <string name="connected">Connected</string>
    <string name="continue_str">Agree and continue</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="current_location">Current location</string>
    <string name="current_location_error_subtext">Cannot add current location. Please enable a location service in <a href="">Settings > Location</a></string>
    <string name="current_location_function_disable">Turn on location services to add a new location</string>
    <string name="current_location_function_to_setting">Settings</string>
    <string name="current_location_subtext">Add current location</string>
    <string name="data_usage_reminder">Permission prompt</string>
    <string name="day_format_style">d</string>
    <string name="default_panel_dialog_title">Please choose the window</string>
    <string name="default_panel_summary">Default content to display</string>
    <string name="default_panel_title">Default window</string>
    <string name="detail_more_btn_text">detail_more_btn_text</string>
    <string name="detail_text_level_0">detail_text_level_0</string>
    <string name="dual_time_zone_summary">Display the current location time and home time when you’re in a different time zone</string>
    <string name="dual_time_zone_title">Dual time display</string>
    <string name="feed_back">Feedback</string>
    <string name="fit_setting_title">Google Fit</string>
    <string name="forecast_update_period">Forecast update period</string>
    <string name="home">Home</string>
    <string name="information_show">Show info</string>
    <string name="request_time_update_weather_interval_hours">@string/forecast_update_period_value_default</string>
    <string name="select_forecast_update_period">Select forecast update period</string>
    <string name="sync_weather">Sync weather</string>
    <string name="temperature_units">Temperature unit</string>
    <string name="temperature_units_select">Select temperature unit</string>
    <string name="weather_panel">Weather Panel</string>
    <string name="weather_panel_description">Sync this panel to see the weather of the chosen location.</string>
    <string name="weather_panel_summary">Get local forecasts &amp; alerts</string>
    <string name="weather_panel_title">Weather</string>
    <string name="widget_aqi_content">AQI : 30</string>
    <string name="widget_cityname">City name</string>
    <string name="widget_phrase">Cloudy</string>
    <string name="widget_preview_temperature_21">21°</string>
    <string name="widget_preview_temperature_24">24°</string>
    <string name="widget_preview_temperature_25">25°</string>
    <string name="widget_preview_temperature_26">26°</string>
    <string name="widget_preview_temperature_27">27°</string>
    <string name="widget_preview_temperature_28">28°</string>
    <string name="widget_preview_temperature_30">30°</string>
    <string name="widget_preview_temperature_32">32°</string>
    <string name="widget_weather_day1">THU</string>
    <string name="widget_weather_day2">FRI</string>
    <string name="widget_weather_day3">SAT</string>
    <string name="widget_weather_day4">SUN</string>
    <string name="widget_weather_day5">MON</string>
</resources>