<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingTop="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="24.0dip">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/alternative_title" style="@style/AlternativeText" />
            <TextView android:textSize="20.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/alternative_permission_name" style="@style/AlternativeText" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/alternative_permission_desc" android:layout_weight="1.0" style="@style/AlternativeDescText" />
                <Switch android:id="@id/alter_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:checked="true" style="@style/WeatherSettingSwitchbar" />
            </LinearLayout>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/alternative_option_desc" style="@style/AlternativeOptionText" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="18.0dip" android:layout_marginBottom="18.0dip">
        <TextView android:id="@id/alter_button" android:background="?android:selectableItemBackgroundBorderless" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alternative_button_accept" android:layout_marginEnd="28.0dip" android:layout_alignParentEnd="true" style="@style/AlternativeButton" />
    </RelativeLayout>
</LinearLayout>