<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/layout_content" android:background="@drawable/widget_weather_card_bg" android:paddingTop="@dimen/widget_adapt_10dp" android:paddingBottom="@dimen/widget_adapt_14dp" android:layout_width="@dimen/widget_weather_max_width" android:layout_height="wrap_content" android:paddingHorizontal="@dimen/widget_adapt_18dp">
        <LinearLayout android:orientation="horizontal" android:id="@id/layout_weather" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="@color/widget_weather_accent_color" android:gravity="center" android:id="@id/tv_temperature" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_preview_temperature_27" android:includeFontPadding="false" android:lineSpacingExtra="0.0dip" android:layout_marginStart="@dimen/widget_adapt_8dp" android:firstBaselineToTopHeight="0.0dip" android:lastBaselineToBottomHeight="0.0dip" style="@style/AdaptTime.Text64" />
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_adapt_16dp" android:layout_weight="1.0" android:layout_marginStart="@dimen/widget_adapt_8dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textAppearance="@style/RobotoMediumFont.Text14" android:textColor="@color/widget_weather_text_color_1" android:ellipsize="end" android:id="@id/city" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_cityname" android:lines="1" />
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/layout_aqi" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textAppearance="@style/RobotoMediumFont.Text14" android:textColor="@color/widget_weather_text_color_1" android:ellipsize="end" android:id="@id/tv_phrase" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_phrase" android:lines="1" />
                    <TextView android:textAppearance="@style/RobotoMediumFont.Text14" android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="｜" />
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/cli_adapt_12dp">
                        <TextView android:textAppearance="@style/RobotoMediumFont.Text14" android:textColor="@color/widget_weather_text_color_1" android:ellipsize="end" android:id="@id/aqi_content" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/widget_aqi_content" android:lines="1" android:layout_weight="1.0" />
                        <ImageView android:id="@id/aqi_icon" android:layout_width="@dimen/widget_adapt_10dp" android:layout_height="@dimen/widget_adapt_10dp" android:src="@drawable/aqi_dot_0" android:scaleType="fitXY" android:layout_marginStart="2.0dip" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <FrameLayout android:id="@id/layout_switch_btn" android:background="@drawable/widget_weather_switch_btn_bg" android:layout_width="@dimen/widget_adapt_48dp" android:layout_height="@dimen/widget_adapt_48dp" android:layout_marginTop="@dimen/widget_adapt_10dp">
                <ImageView android:layout_gravity="center" android:id="@id/img_switch_btn" android:layout_width="@dimen/widget_adapt_24dp" android:layout_height="@dimen/widget_adapt_24dp" android:src="@drawable/ic_weather_widget_view_hour" android:scaleType="fitXY" />
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/layout_weather_list" android:background="@drawable/widget_weather_inner_card_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_adapt_4dp" android:paddingHorizontal="@dimen/widget_adapt_30dp">
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0" android:paddingVertical="@dimen/widget_adapt_12dp">
                <TextView android:textStyle="bold" android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_weather_day1" android:includeFontPadding="false" android:textAllCaps="true" style="@style/RobotoMediumFont.Text12" />
                <ImageView android:layout_width="@dimen/widget_adapt_20dp" android:layout_height="@dimen/widget_adapt_20dp" android:src="@drawable/ic_weather_sunny" android:scaleType="fitCenter" android:adjustViewBounds="true" android:includeFontPadding="false" android:layout_marginVertical="@dimen/widget_adapt_8dp" />
                <TextView android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_preview_temperature_26" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
                <TextView android:textColor="@color/widget_weather_text_color_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_adapt_4dp" android:text="@string/widget_preview_temperature_32" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0" android:paddingVertical="@dimen/widget_adapt_12dp">
                <TextView android:textStyle="bold" android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_weather_day2" android:includeFontPadding="false" android:textAllCaps="true" style="@style/RobotoMediumFont.Text12" />
                <ImageView android:layout_width="@dimen/widget_adapt_20dp" android:layout_height="@dimen/widget_adapt_20dp" android:src="@drawable/ic_weather_cloudy" android:scaleType="fitCenter" android:adjustViewBounds="true" android:includeFontPadding="false" android:layout_marginVertical="@dimen/widget_adapt_8dp" />
                <TextView android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_preview_temperature_25" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
                <TextView android:textColor="@color/widget_weather_text_color_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_adapt_4dp" android:text="@string/widget_preview_temperature_30" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0" android:paddingVertical="@dimen/widget_adapt_12dp">
                <TextView android:textStyle="bold" android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_weather_day3" android:includeFontPadding="false" android:textAllCaps="true" style="@style/RobotoMediumFont.Text12" />
                <ImageView android:layout_width="@dimen/widget_adapt_20dp" android:layout_height="@dimen/widget_adapt_20dp" android:src="@drawable/ic_weather_thunderstorms" android:scaleType="fitCenter" android:adjustViewBounds="true" android:includeFontPadding="false" android:layout_marginVertical="@dimen/widget_adapt_8dp" />
                <TextView android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_preview_temperature_24" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
                <TextView android:textColor="@color/widget_weather_text_color_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_adapt_4dp" android:text="@string/widget_preview_temperature_28" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0" android:paddingVertical="@dimen/widget_adapt_12dp">
                <TextView android:textStyle="bold" android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_weather_day4" android:includeFontPadding="false" android:textAllCaps="true" style="@style/RobotoMediumFont.Text12" />
                <ImageView android:layout_width="@dimen/widget_adapt_20dp" android:layout_height="@dimen/widget_adapt_20dp" android:src="@drawable/ic_weather_partly_sunny_thunderstorms" android:scaleType="fitCenter" android:adjustViewBounds="true" android:includeFontPadding="false" android:layout_marginVertical="@dimen/widget_adapt_8dp" />
                <TextView android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_preview_temperature_27" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
                <TextView android:textColor="@color/widget_weather_text_color_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_adapt_4dp" android:text="@string/widget_preview_temperature_21" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0" android:paddingVertical="@dimen/widget_adapt_12dp">
                <TextView android:textStyle="bold" android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_weather_day5" android:includeFontPadding="false" android:textAllCaps="true" style="@style/RobotoMediumFont.Text12" />
                <ImageView android:layout_width="@dimen/widget_adapt_20dp" android:layout_height="@dimen/widget_adapt_20dp" android:src="@drawable/ic_weather_rain" android:scaleType="fitCenter" android:adjustViewBounds="true" android:includeFontPadding="false" android:layout_marginVertical="@dimen/widget_adapt_8dp" />
                <TextView android:textColor="@color/widget_weather_text_color_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_preview_temperature_30" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
                <TextView android:textColor="@color/widget_weather_text_color_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/widget_adapt_4dp" android:text="@string/widget_preview_temperature_28" android:includeFontPadding="false" style="@style/RobotoMediumFont.Text12" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>