<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/cli_adapt_8dp" android:layout_marginBottom="@dimen/cli_adapt_24dp" android:layout_marginHorizontal="@dimen/cli_adapt_20dp" app:cardBackgroundColor="@color/plugin_cli_card_bg" app:cardCornerRadius="@dimen/cli_adapt_28dp" app:cardElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cli_adapt_12dp" android:text="@string/weather_panel" style="@style/CliCard.Text20" />
        <TextView android:textColor="@color/plugin_cli_sec_text" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cli_adapt_28dp" android:text="@string/weather_panel_description" android:layout_marginHorizontal="@dimen/cli_adapt_50dp" style="@style/CardPanelDescription" />
        <TextView android:textColor="@color/plugin_cli_negative_card_text" android:gravity="center" android:layout_gravity="bottom|center" android:id="@id/tv_sync_weather" android:background="@drawable/plugin_multiday_addcity_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/cli_adapt_24dp" android:minHeight="@dimen/cli_adapt_32dp" android:text="@string/sync_weather" android:drawablePadding="@dimen/cli_adapt_6dp" android:textAllCaps="false" android:drawableStart="@drawable/ic_multiday_add" android:paddingStart="@dimen/cli_adapt_16dp" android:paddingEnd="@dimen/cli_adapt_20dp" android:drawableTint="@color/plugin_cli_negative_card_text" android:paddingVertical="@dimen/cli_adapt_8dp" style="@style/CardAdd" />
    </LinearLayout>
</androidx.cardview.widget.CardView>